[Daytrader] fix the problem with java.se modules while running with java 8